--- a/about_me.html
+++ b/about_me.html
@@ -3,9 +3,14 @@
     <head>
         <link rel="stylesheet" href="/css/master.css">
         <meta charset="utf-8">
-        <title></title>
+        <title>About Me</title>
     </head>
     <body>
-
+        <ul class="navbar">
+            <li><a class="navbar-item" href="home.html">Home</a></li>
+            <li><a class="navbar-item" href="learn.html">Learn</a></li>
+            <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
+            <li><a class="active navbar-item" href="#">About Me</a></li>
+        </ul>
     </body>
 </html>
