--- a/learn.html
+++ b/learn.html
@@ -3,9 +3,14 @@
     <head>
         <link rel="stylesheet" href="/css/master.css">
         <meta charset="utf-8">
-        <title></title>
+        <title> Learn </title>
     </head>
     <body>
-
+        <ul class="navbar">
+            <li><a class="navbar-item" href="home.html">Home</a></li>
+            <li><a class="active navbar-item" href="#">Learn</a></li>
+            <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
+            <li><a class="navbar-item" href="about_me.html">About Me</a></li>
+        </ul>
     </body>
 </html>
