Add Elements to other pages

--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
             <li><a class="navbar-item" href="about_me.html">About Me</a></li>
         </ul>
 
-        <div class="image1" >
-            <img src="/assets/img1.png" alt="hands-touching">
+        <div class="text-image-section" >
+            <img src="/assets/connect_hands.png" alt="hands-touching">
             <div class="shade">
             </div>
             <div class="centered">
@@ -23,15 +23,15 @@
                 <br />-Steve Jobs (1955-2011)
             </div>
         </div>
-        <div class="">
-            <img src="" alt="" />
+        <div class="list-section" style="display: flex;">
+            <ul>
+                <li>
+                    <img src="/assets/code-on-laptop.png" alt="code on laptop"/>
+                </li>
+                <li>
+                    Web Development is fun !!
+                </li>
+            </ul>
         </div>
-        <div class="">
-        </div>
-
-        <div>
-
-        </div>
-
     </body>
 </html>
