--- a/learn.html
+++ b/learn.html
@@ -6,14 +6,17 @@
         <title> Learn </title>
     </head>
     <body>
-        <ul class="navbar">
-            <li><a class="navbar-item" href="home.html">Home</a></li>
-            <li><a class="active navbar-item" href="#">Learn</a></li>
-            <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
-            <li><a class="navbar-item" href="about_me.html">About Me</a></li>
-        </ul>
+
+        <header>
+            <ul class="navbar">
+                <li><a class="navbar-item" href="home.html">Home</a></li>
+                <li><a class="active navbar-item" href="#">Learn</a></li>
+                <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
+                <li><a class="navbar-item" href="about_me.html">About Me</a></li>
+            </ul>
+        </header>
         <div class="text-image-section" >
-            <img src="/assets/spacex.png" alt="spacex rockets landing">
+            <img class="image-resizer" src="/assets/spacex.png" alt="spacex rockets landing">
             <div class="shade">
             </div>
             <div class="centered">
@@ -31,8 +34,7 @@
 
             <ul>
                 <li class="book-link">
-                    1. Linux System Administrators Handbook
-                </li>
+                    1. Linux System Administrators Handbook<li>
                 <li class="book-link">
                     2. Advanced Java Programming</li>
                 <li class="book-link">
@@ -52,7 +54,6 @@
                 <li class="book-link">
                     10. REST APIs with Django</li>
             </ul>
-
         </div>
 
         <div class="list-section ">
@@ -60,11 +61,9 @@
                 Web Video Tutorials That <br />
                 Helped Me Learn Web Development
             </div>
-
             <ul>
                 <li class="book-link">
-                    1. Linux System Administrators Handbook
-                </li>
+                    1. Linux System Administrators Handbook<li>
                 <li class="book-link">
                     2. Advanced Java Programming</li>
                 <li class="book-link">
