--- a/about_me.html
+++ b/about_me.html
@@ -12,5 +12,17 @@
             <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
             <li><a class="active navbar-item" href="#">About Me</a></li>
         </ul>
+
+        <section class="name-section">
+            <div class="title">MD. SHAHRIYAR HOSSAIN</div>
+            <div class="subtitle">
+                Software Engineer, Web Developer
+            </div>
+        </section>
+
+        <section class="image-section">
+            <img class="mypic" src="/assets/myself.png" alt="">
+        </section>
+
     </body>
 </html>
