--- a/watch_live.html
+++ b/watch_live.html
@@ -19,7 +19,7 @@
         </ul>
     </header>
 
-    <iframe frameborder="0" marginheight="0" marginwidth="0" height="800px" src="http://172.17.50.112/" name="iframe_a" scrolling="no" width="100%">
+    <iframe frameborder="0" marginheight="0" marginwidth="0" height="800" src="https://cdn.crichd.pro/embed2.php?id=skysp2&q=Sky Sports Cricket" name="iframe_a" scrolling="no" width="100%">Your Browser Do not Support Iframe</iframe>
         Your Browser Do not Support Iframe
     </iframe>
 
