--- a/watch_live.html
+++ b/watch_live.html
@@ -19,9 +19,11 @@
         </ul>
     </header>
 
-    <iframe frameborder="0" marginheight="0" marginwidth="0" height="800" src="https://cdn.crichd.pro/embed2.php?id=skysp2&q=Sky Sports Cricket" name="iframe_a" scrolling="no" width="100%">Your Browser Do not Support Iframe</iframe>
+    <iframe frameborder="0" marginheight="0" marginwidth="0" height="800" src="https://cdn.crichd.pro/embed2.php?id=skysp2&q=Sky Sports Cricket" name="iframe_a" scrolling="no" width="100%" allowfullscreen>
         Your Browser Do not Support Iframe
     </iframe>
+
+
 
 
 </body>
