--- a/about_me.html
+++ b/about_me.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <link rel="stylesheet" href="/css/master.css">
-        <meta charset="utf-8">
-        <title>About Me</title>
-    </head>
-    <body>
-        <ul class="navbar">
-            <li><a class="navbar-item" href="home.html">Home</a></li>
-            <li><a class="navbar-item" href="learn.html">Learn</a></li>
-            <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
-            <li><a class="active navbar-item" href="#">About Me</a></li>
-        </ul>
 
-        <section class="name-section">
-            <div class="title">MD. SHAHRIYAR HOSSAIN</div>
-            <div class="subtitle">
-                Software Engineer, Web Developer
-            </div>
-        </section>
+<head>
+    <link rel="stylesheet" href="/css/master.css">
+    <meta charset="utf-8">
+    <title>About Me</title>
+</head>
 
-        <section class="image-section">
-            <img class="mypic" src="/assets/myself.png" alt="">
-        </section>
+<body>
+    <ul class="navbar">
+        <li><a class="navbar-item" href="home.html">Home</a></li>
+        <li><a class="navbar-item" href="learn.html">Learn</a></li>
+        <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
+        <li><a class="active navbar-item" href="#">About Me</a></li>
+        <li><a class="navbar-item" href="watch_live.html">Watch Live</a></li>
+    </ul>
 
-    </body>
+    <section class="name-section">
+        <div class="title">MD. SHAHRIYAR HOSSAIN</div>
+        <div class="subtitle">
+            Software Engineer, Web Developer
+        </div>
+    </section>
+
+    <section class="image-section">
+        <img class="mypic" src="/assets/myself.png" alt="">
+    </section>
+
+</body>
+
 </html>
