--- a/learn.html
+++ b/learn.html
@@ -15,6 +15,7 @@
             <li><a class="active navbar-item" href="#">Learn</a></li>
             <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
             <li><a class="navbar-item" href="about_me.html">About Me</a></li>
+            <li><a class="navbar-item" href="watch_live.html">Watch Live</a></li>
         </ul>
     </header>
     <div class="text-image-section">
@@ -29,7 +30,7 @@
         </div>
     </div>
 
-    <section  style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center">
+    <section style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center">
         <div class="list-section" style="">
             <div class="list-title">
                 My Top 10 Programming Books <br />
