--- a/watch_live.html
+++ b/watch_live.html
@@ -15,7 +15,7 @@
             <li><a class="navbar-item" href="#">Learn</a></li>
             <li><a class="navbar-item" href="about_course.html">About CSE391</a></li>
             <li><a class="navbar-item" href="about_me.html">About Me</a></li>
-            <li><a class="navbar-item active" href="about_me.html">Watch Live</a></li>
+            <li><a class="navbar-item active" href="#">Watch Live</a></li>
         </ul>
     </header>
 
