--- a/learn.html
+++ b/learn.html
@@ -30,68 +30,186 @@
         </div>
     </div>
 
-    <section style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center">
-        <div class="list-section" style="">
+    <section class="list-section">
+        <div>
             <div class="list-title">
                 My Top 10 Programming Books <br />
                 That I Suggest Reading
             </div>
-
             <div>
                 <ul>
                     <li class="book-link">
-                        <div style="display: flex; width: 100%; height: 30px;">
-                            <div style="width: 85%">
-                                <a href="www.youtube.com" target="_blank">1. Linux System Administrators Handbook</a>
-                            </div>
-                            <div style="width: 15%;">
-                                <img style="height: 32px;" src="/assets/link.png" alt="">
+                        <div class="book-link-item">
+                            <div class="book-item">1. Linux System Administrators Handbook</div>
+                            <div>
+                                <a href="https://www.amazon.com/UNIX-Linux-System-Administration-Handbook/dp/0134277554" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
                             </div>
                         </div>
                     </li>
                     <li class="book-link">
-                        2. Advanced Java Programming</li>
+                        <div class="book-link-item">
+                            <div class="book-item">2. Advanced Java Programming </div>
+                            <div>
+                                <a href="https://www.rokomari.com/book/179965/advanced-java-programing" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="book-link">
-                        3. Java Thread Programming</li>
+                        <div class="book-link-item">
+                            <div class="book-item">3. Java Thread Programming</div>
+                            <div>
+                                <a href="https://www.rokomari.com/book/159071/java-thread-programming" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="book-link">
-                        4. Graph Algorithm</li>
+                        <div class="book-link-item">
+                            <div class="book-item">4. Graph Algorithm</div>
+                            <div>
+                                <a href="https://www.rokomari.com/book/120985/graph-algorithm" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="book-link">
-                        5. The 100$ Startup</li>
+                        <div class="book-link-item">
+                            <div class="book-item">5. The 100$ Startup</div>
+                            <div>
+                                <a href="https://www.amazon.com/100-Startup-Reinvent-Living-Create/dp/0307951529" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="book-link">
-                        6. The Lean Startup</li>
+                        <div class="book-link-item">
+                            <div class="book-item">6. The Lean Startup</div>
+                            <div><a href="https://www.amazon.com/Lean-Startup-Entrepreneurs-Continuous-Innovation/dp/0307887898" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="book-link">
-                        7. Sprint: How to Solve Big Problems and Test New Ideas in Just 5 Days</li>
+                        <div class="book-link-item">
+                            <div class="book-item">7. Sprint: How to Solve Big Problems and Test New Ideas in Just 5 Days</div>
+                            <div>
+                                <a href="https://www.rokomari.com/book/140038/sprint--how-to-solve-big-problems-and-test-new-ideas-in-just-5-days" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="book-link">
-                        8. Programming Contest: Data Structure and Algorithms</li>
+                        <div class="book-link-item">
+                            <div class="book-item">8. Programming Contest: Data Structure and Algorithms</div>
+                            <div>
+                                <a href="https://www.rokomari.com/book/117663/programming-contest-data-structures-and-algorithms" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="book-link">
-                        9. The Little Book On REST Services</li>
+                        <div class="book-link-item">
+                            <div class="book-item">9. The Little Book On REST Services</div>
+                            <div>
+                                <a href="https://www.kennethlange.com/books/The-Little-Book-on-REST-Services.pdf" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="book-link">
-                        10. REST APIs with Django</li>
+                        <div class="book-link-item">
+                            <div class="book-item">10. REST APIs with Django</div>
+                            <div>
+                                <a href="https://www.amazon.com/REST-APIs-Django-powerful-Python/dp/198302998X" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
     </section>
 
-    <div class="list-section ">
-        <div class="list-title">
-            Web Video Tutorials That <br />
-            Helped Me Learn Web Development
+    <section class="list-section">
+        <div>
+            <div class="list-title">
+                Web Video Tutorials That <br />
+                Helped Me Learn Web Development
+            </div>
+            <div>
+                <ul>
+                    <li class="book-link">
+                        <div class="book-link-item">
+                            <div class="book-item">
+                                1. React - The Complete Guide
+                            </div>
+                            <div>
+                                <a href="https://www.udemy.com/course/react-the-complete-guide-incl-redux/" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="book-link">
+                        <div class="book-link-item">
+                            <div class="book-item">2. Understanding TypeScript - 2021 Edition</div>
+                            <div>
+                                <a href="https://www.udemy.com/course/understanding-typescript/?src=sac&kw=Understanding+TypeScript+-+2021+Edition">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="book-link">
+                        <div class="book-link-item">
+                            <div class="book-item">3. Udemy - Spring & Hibernate for Beginners (includes Spring Boot)</div>
+                            <div>
+                                <a href="https://www.udemy.com/course/spring-hibernate-tutorial/" target="_blank">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="book-link">
+                        <div class="book-link-item">
+                            <div class="book-item">
+                                4. Django Tutorials
+                            </div>
+                            <div>
+                                <a href="https://www.youtube.com/playlist?list=PL-osiE80TeTtoQCKZ03TU5fNfx2UY6U4p">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="book-link">
+                        <div class="book-link-item">
+                            <div class="book-item">
+                                4. JavaScript Programming
+                            </div>
+                            <div>
+                                <a href="https://youtu.be/jS4aFq5-91M">
+                                    <img src="/assets/link.png" alt="external-link-icon">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <ul>
-            <li class="book-link">
-                1. Linux System Administrators Handbook
-            <li>
-            <li class="book-link">
-                2. Advanced Java Programming</li>
-            <li class="book-link">
-                3. Java Thread Programming</li>
-            <li class="book-link">
-                4. Graph Algorithm</li>
-            <li class="book-link">
-                5. The 100$ Startup</li>
-        </ul>
-
-    </div>
+    </section>
 
 </body>
 
