--- a/learn.html
+++ b/learn.html
@@ -188,7 +188,8 @@
                                 4. Django Tutorials
                             </div>
                             <div>
-                                <a href="https://www.youtube.com/playlist?list=PL-osiE80TeTtoQCKZ03TU5fNfx2UY6U4p">
+                                <a href="https://www.youtube.com/playlist?list=PL-osiE80TeTtoQCKZ03TU5fNfx2UY6U4p" target="
+                                ">
                                     <img src="/assets/link.png" alt="external-link-icon">
                                 </a>
                             </div>
@@ -200,7 +201,7 @@
                                 4. JavaScript Programming
                             </div>
                             <div>
-                                <a href="https://youtu.be/jS4aFq5-91M">
+                                <a href="https://youtu.be/jS4aFq5-91M" target="_blank">
                                     <img src="/assets/link.png" alt="external-link-icon">
                                 </a>
                             </div>
