Reduce Image Size

--- a/about_me.html
+++ b/about_me.html
@@ -24,7 +24,7 @@
     </section>
 
     <section class="image-section">
-        <img class="mypic" src="/assets/myself.png" alt="">
+        <img class="mypic" src="/assets/myself-min.png" alt="">
     </section>
 
     <section class="icon-section">
