Remove Scrolling effect

--- a/learn.html
+++ b/learn.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-
     <header>
         <ul class="navbar">
             <li><a class="navbar-item" href="home.html">Home</a></li>
@@ -18,17 +17,21 @@
             <li><a class="navbar-item" href="watch_live.html">Watch Live</a></li>
         </ul>
     </header>
-    <div class="text-image-section">
-        <img class="image-resizer" src="/assets/spacex.png" alt="spacex rockets landing">
-        <div class="shade">
+
+    <section>
+        <div class="text-image-section">
+            <img class="image-resizer" src="/assets/spacex.png" alt="spacex rockets landing">
+            <div class="shade">
+            </div>
+            <div class="centered">
+                “Everybody is a genius. But if you judge a fish
+                by its ability to climb a tree,
+                it will live its whole life believing
+                that it is stupid.”
+                <br /> -Albert Einstein (1879-1955)
+            </div>
         </div>
-        <div class="centered">
-            “Everybody is a genius.
-            But if you judge a fish by its ability to climb a tree,
-            it will live its whole life believing that it is stupid.”
-            <br /> -Albert Einstein (1879-1955)
-        </div>
-    </div>
+    </section>
 
     <section class="list-section">
         <div>
